# deepflame-dev

./: .gitignore  Allwclean  Allwmake  bashrc.in  configure.sh  install.sh
src/dfCanteraMixture/: CanteraMixture.C  CanteraMixture.H  CanteraMixture_.C  CanteraMixture_.H  makeThermos.C
src/dfChemistryModel/: blasdnnFunctions.H  blasdnnFunctions_CH4.H  blasdnnFunctions_H2.H  dfChemistryModel.C  dfChemistryModel.H  libtorchFunctions.H  pytorchFunctions.H  tensorflowFunctions.H  thermodnnFunctions.H  torchFunctions.H
src/dfChemistryModel/DNNInferencer_blas/: CMakeLists.txt  CMakeLists.txt.fugaku  CMakeLists.txt.x86_64  DNNInferencer_blas.H  DNNInferencer_blas.cpp  DNNThermo_blas.H  DNNThermo_blas.cpp  Layer.H  Layer.cpp  Makefile  Tensor.H  bias_gelu_s_ldm_lookup.slave.c  bias_s_ldm.slave.c  build.sh  gelu_d_table.h  gelu_h_table.h  gelu_s_exp.slave.c  gelu_s_table.h  kernel.H  kernel_double.cpp  kernel_float.cpp  kernel_half.cpp  make.inc.sw  run.sh  slave_kernel.h  slave_param.h
src/dfChemistryModel/DNNInferencer_blas/host/: DNNInferencer_blas.cpp  Layer.cpp  kernel_double.cpp  kernel_float.cpp
src/dfChemistryModel/DNNInferencer_blas/include/: DNNInferencer_blas.H  Layer.H  Tensor.H  gelu_s_slave_table.h  kernel.H  slave_kernel.h  slave_param.h
src/dfChemistryModel/DNNInferencer_blas/slave/double/: bias_d_ldm.c  bias_d_naive.c  bias_gelu_d_fastexp.c  bias_gelu_d_fastexp_simd.c  bias_gelu_d_ldm_lookup.c  gelu_d_exp.c  gelu_d_fastexp.c  gelu_d_ldm.c  gelu_d_ldm_lookup.c  gelu_d_naive.c
src/dfChemistryModel/DNNInferencer_blas/slave/float/: bias_gelu_s_fastexp.c  bias_gelu_s_fastexp_simd.c  bias_gelu_s_ldm_lookup_prefetch.c  bias_s_naive.c  gelu_s_exp.c  gelu_s_fastexp.c  gelu_s_ldm.c  gelu_s_ldm_lookup.c  gelu_s_naive.c
src/dfChemistryModel/DNNInferencer_blas/test/: gelu_s_test.cpp
src/dfChemistryModel/DNNInferencer_tf/: CMakeLists.txt  DNNInferencertf.H  DNNInferencertf.cpp
src/dfGenMatrix/: EulerDdtScheme.C  GenFvMatrix.H  GenMatrix_E.C  GenMatrix_U.C  GenMatrix_Y.C  GenMatrix_p.C  dfThermo.C  gaussConvectionScheme.C  gaussGrad.C  gaussLaplacianScheme.C  linearViscousStress.C  matrix_gen_slave_kernel.h  matrix_gen_slave_param.h  preProcessY_gradY_div_meshV_naive.c  preProcessY_gradY_partition_naive.c  utils.C
src/dfHPCGPrecon/: faceAreaPairHPCGAgglomeration.C  faceAreaPairHPCGAgglomeration.H
src/dfMatrices/: csrMatrix.C  csrMatrix.H
src/dfSchedule/: BCSR.C  BCSR.H  BCSRPattern.C  BCSRPattern.H  MeshSchedule.C  MeshSchedule.H  PartitionMeshSchedule.C  PartitionMeshSchedule.H  StructureMeshSchedule.H  StructuredMeshSchedule.C  StructuredMeshSchedule.H  StructuredSubMesh.C  StructuredSubMesh.H  SturctureMeshSchedule.C  SturcturedMeshSchedule.C  SubMesh.C  SubMesh.H  UnstructuredMeshSchedule.C  UnstructuredMeshSchedule.H  UnstructuredSubMesh.C  UnstructuredSubMesh.H  UnsturcturedMeshSchedule.C  XBlock2DPartitionStructuredMeshSchedule.C  XBlock2DPartitionStructuredMeshSchedule.H  XYBlock1DColoringStructuredMeshSchedule.C  XYBlock1DColoringStructuredMeshSchedule.H  csrPattern.C  csrPattern.H  schedule.C  schedule.H
(+542 files in other folders)
